--- a/MalDev/Payload-Placement.html
+++ b/MalDev/Payload-Placement.html
@@ -856,7 +856,7 @@
                 <p style="font-weight: bold;">[+] طب ليه الهاكرز بيحبوا منطقة الـ rsrc ؟</p>
                 <p>قولتلك فوق إن هتعرف فـ آخر المقالة ، وجه الوقت أقولك .. بيفضلوا المكان ده لإن :</p>
                 <ul>
-                    <li>مناطق الـ data والـ rdata ، محدودين من نحية الحجم .. حجمهم 10 بايت ودا الحد الأقصي ليهم .. يعني
+                    <li>مناطق الـ data والـ rdata ، محدودين من نحية الحجم .. يعني
                         لو الشيل كود بتاعك حجمه كبير فـ صعب يتحط فـ المنطقتين دول.</li>
                     <li>وبالنسبة لمنطقة الـ text ، ودي بتكون متراقبة بشكل كبير من برامج الـ Antivirus ، لإن فيها صلاحيات
                         Execute ، فـ مش أنسب حاجه تحط الشيل كود بتاعك فيها.</li>
