--- a/MalDev/Payload-Placement.html
+++ b/MalDev/Payload-Placement.html
@@ -887,7 +887,7 @@
 
             </div>
             <div class="nav-buttons">
-                <a href="#" onclick="nextArticle()" style="direction: ltr;">Next →</a>
+                <a href="./Payload-Encryption.html" onclick="nextArticle()" style="direction: ltr;">Next →</a>
                 <a href="./PE-Files.html" onclick="previousArticle()" style="direction: ltr;">← Previous</a>
             </div>
     </section>
