--- a/MalDev/Payload-Encryption.html
+++ b/MalDev/Payload-Encryption.html
@@ -1695,7 +1695,7 @@
                     </div>
                 </ul>
                 <p style="border-top: 2px solid #16ff00;"></p>
-                <p>[+] حبيت أخلي الموضوع Challinging أكتر .. وقولت أجرب ع Kaspersky Premium .. بس يا دوب حطيت الملفات
+                <p>[+] حبيت أخلي الموضوع Challenging أكتر .. وقولت أجرب ع Kaspersky Premium .. بس يا دوب حطيت الملفات
                     كوبي لقيت المنظر ده : </p>
                 <ul>
                     <li>
