--- a/MalDev/Payload-Encryption.html
+++ b/MalDev/Payload-Encryption.html
@@ -1723,6 +1723,28 @@
                     <li>حاول تجرب وتكتشف كدا بنفسك ... </li>
                 </ul>
                 <p style="border-top: 2px solid #16ff00;"></p>
+                <p style="font-weight: bold;">[#] تعديل بعد حل الإيرور :</p>
+                <p>[+] محبتش أشيل الجزء اللـ فوق من المقالة ، وسيبتها عشان تعرف إن أكيد بيحصل إيرورز ، وتحاول بنفسك
+                    تحلها.
+                </p>
+                <p>[+] المشكلة كانت إني كنت عامل Build للبرامج اللـ مفتحتش دي ع نمط الـ Debug .. والحل إنك هتغير النمط
+                    وتبني ع الـ Release</p>
+                <ul>
+                    <li>ودا كدا للـ RC4 ، وإخواته .. Done ✅</li>
+                    <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="../src/Pics/Bypass-13.png" alt="Bypass-13" class="article-image" loading="lazy">
+                    </div>
+                    <li>الـ AES وأخوه .. Done ✅</li>
+                    <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="../src/Pics/Bypass-14.png" alt="Bypass-14" class="article-image" loading="lazy">
+                    </div>
+                    <li>بس طلعا متحاولش تفرح كتير .. إحنا بس مجرد عدينا الـ Static Analysis .. بس وقت الجد والحقيقة لما
+                        يترن البرنامج وييجي يشغل الـ Calculator .. الـ Dynamic Analysis هيقفشه .. وهنشوف دا المقالة
+                        الجاية.</li>
+                </ul>
+
+
+                <p style="border-top: 2px solid #16ff00;"></p>
                 <p>وبكدا . أتمني تكون استفدت حاجه .. ونلتقي فـ مقالة قادمة .. ولو عندك أي تعليق ، استفسار ، أي حاجه ..
                     متترددش وكلمني.</p>
             </div>
@@ -1783,7 +1805,7 @@
 
             </div>
             <div class="nav-buttons">
-                <a href="#" onclick="nextArticle()" style="direction: ltr;">Next →</a>
+                <a href="./Payload-Obfuscation.html" onclick="nextArticle()" style="direction: ltr;">Next →</a>
                 <a href="./Payload-Placement.html" onclick="previousArticle()" style="direction: ltr;">← Previous</a>
             </div>
     </section>
