--- a/MalDev/Payload-Encryption.html
+++ b/MalDev/Payload-Encryption.html
@@ -1738,7 +1738,7 @@
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/Bypass-14.png" alt="Bypass-14" class="article-image" loading="lazy">
                     </div>
-                    <li>بس طلعا متحاولش تفرح كتير .. إحنا بس مجرد عدينا الـ Static Analysis .. بس وقت الجد والحقيقة لما
+                    <li>بس طبعا متحاولش تفرح كتير .. إحنا بس مجرد عدينا الـ Static Analysis .. بس وقت الجد والحقيقة لما
                         يترن البرنامج وييجي يشغل الـ Calculator .. الـ Dynamic Analysis هيقفشه .. وهنشوف دا المقالة
                         الجاية.</li>
                 </ul>
