--- a/MalDev/Payload-Obfuscation.html
+++ b/MalDev/Payload-Obfuscation.html
@@ -652,7 +652,7 @@ int main() {<br>
                 </div>
                 <p style="border-top: 2px solid #16ff00;"></p>
                 <h3 style="direction: ltr;">1.3 Shellcode to MAC Address :</h3>
-                <p>[+] بعد مـ شفنا إزاي نحول الشيل كود لـ IPv4 وIPv6 عشان نعمل تمويه من برامج الـ AV / EDR ، دلوقتي
+                <p>[+] بعد مـ شوفنا إزاي نحول الشيل كود لـ IPv4 وIPv6 عشان نعمل تمويه من برامج الـ AV / EDR ، دلوقتي
                     هنشوف تكنيك تاني ، وهو تحويله لـ MAC Addresses.</p>
                 <p>[+] الفكرة هنا إن أي جهاز ع الشبكة بيكون ليه MAC Address مميز ، وهو عبارة عن 6 بايتس مكتوبة بالـ
                     Hexadecimal ومفصولة بالعلامة (-) ، تعالي نشوف الكود :</p>
@@ -901,7 +901,7 @@ int main() {<br>
                 <p>[+] تعالي نشوف أهم الأجزاء فـ الكود ، لإن زي مقولتلك هو تكرار لنفس الأكواد اللـ فوق مع شوية تعديلات :
                 </p>
                 <ol>
-                    <li>أول جزء ودا الـ Dectionary بتاعنا اللـ هيستبدل منه البايتس فـ الشيل كود بالكلمات دي :</li>
+                    <li>أول جزء ودا الـ Dictionary بتاعنا اللـ هيستبدل منه البايتس فـ الشيل كود بالكلمات دي :</li>
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/Obfs-Words-1.png" alt="ShellcodeToWords-1" class="article-image"
                             loading="lazy">
@@ -1009,12 +1009,12 @@ int main() {<br>
                 <h3 style="direction: ltr;">2.1 IPv4 to Shellcode :</h3>
                 <p>[+] هنا هنعكس اللـ عملناه فوق ، ونرجع الـ IPv4 لـ شيل كود : </p>
                 <ol>
-                    <li>هنا دي عناوين الـ IPv4 اللـ طلعناهم من الـ Obfuscation.</li>
+                    <li> دي عناوين الـ IPv4 اللـ طلعناهم من الـ Obfuscation.</li>
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/Deobfs-IPv4-1.png" alt="IPv4ToShellcode-1" class="article-image"
                             loading="lazy">
                     </div>
-                    <li>هنا دا تعريف دالة API من مكتبة NTDLL وهي RtlIpv4StringToAddressA ، ودي بتُستخدم عشان تحول عناوين
+                    <li>و دا تعريف دالة API من مكتبة NTDLL وهي RtlIpv4StringToAddressA ، ودي بتُستخدم عشان تحول عناوين
                         الـ IP وترجعة للشيل كود.</li>
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/Deobfs-IPv4-2.png" alt="IPv4ToShellcode-2" class="article-image"
@@ -1506,7 +1506,7 @@ int main() {<br>
                 <h3 style="direction: ltr;">2.5 Words to Shellcode :</h3>
                 <p>آخر تكنيك .. هنرجع الشيل كود من الكلمات اللـ حولناها.</p>
                 <ol>
-                    <li>هنضيف الـ Dectionary .. اللـ استخدمناه عشان نحول من الشيل كود.</li>
+                    <li>هنضيف الـ Dictionary .. اللـ استخدمناه عشان نحول من الشيل كود.</li>
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/Deobfs-Words-1.png" alt="WordsToShellcode-1" class="article-image"
                             loading="lazy">
