--- a/MalDev/Payload-Obfuscation.html
+++ b/MalDev/Payload-Obfuscation.html
@@ -361,15 +361,9 @@
                     </p>
                 </ol>
                 <h2 style="direction: ltr;">1. Obfuscation :</h2>
-                <p>[+] لما استخدمنا الـ Encryption .. اللـ كان بيحصل إن الشيل كود بيتشفر .. يعني بيتحول لحاجة مش مفهومة
-                    .. هنا بيكون فـ مشكلة : </p>
+                <P>[+] فكرة الـ <code style="background: #16ff00; font-size: 14px;">Obfuscation</code> هي أننا بنحول
+                    الشيل كود من كونه داتا خبيثة لـ داتا معلومة .. يعني نخلي شكلها عادي عشان ميتشكش فيها. </P>
                 <ul>
-                    <li>وهي إن ممكن أي AV / EDR يشك فـ إيه الكلام اللـ مش مفهوم ده ، دا غير إن لما بيحصل عمليات التفشير
-                        والفك
-                        وقت الـ Runtime .. دا بيخلي الـ Behavior للملف مشبوه.</li>
-                    <li>فـ عشان كده هنستخدم الـ <code style="background: #16ff00; font-size: 14px;">Obfuscation</code>
-                        .. والفكرة هنا إننا بنحول الشيل كود من كونه داتا خبيثة لـ
-                        داتا معلومة .. يعني نخلي شكلها عادي عشان ميتشكش فيها.</li>
                     <li>زي إننا نحول الشيل كود ده لـ <code
                             style="background: #16ff00; font-size: 14px;">مجموعة IPs</code> .. هنا الـ AV / EDR هيفتكروا
                         إن دي
