--- a/MalDev/Payload-Obfuscation.html
+++ b/MalDev/Payload-Obfuscation.html
@@ -1788,7 +1788,7 @@ int main() {<br>
 
             </div>
             <div class="nav-buttons">
-                <a href="#" onclick="nextArticle()" style="direction: ltr;">Next →</a>
+                <a href="./DLL-Injection.html" onclick="nextArticle()" style="direction: ltr;">Next →</a>
                 <a href="./Payload-Encryption.html" onclick="previousArticle()" style="direction: ltr;">← Previous</a>
             </div>
     </section>
