--- a/MalDev/Shellcode-Injection.html
+++ b/MalDev/Shellcode-Injection.html
@@ -935,7 +935,7 @@
                 </ul>
             </div>
             <div class="nav-buttons">
-                <a href="#" onclick="nextArticle()" style="direction: ltr;">Next →</a>
+                <a href="./APC-Injection.html" onclick="nextArticle()" style="direction: ltr;">Next →</a>
                 <a href="./DLL-Injection.html" onclick="previousArticle()" style="direction: ltr;">← Previous</a>
             </div>
     </section>
